<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jove.a02savedata.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/main_intro"
        android:textSize="36sp"
        android:textStyle="normal|bold" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startSaveWithSharedPreferences"
        android:text="@string/btn_save_with_shared_preferences" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startSaveWithFileInnerFileDir"
        android:text="@string/btn_save_with_file_inner_file" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startSaveWithFileInnerCacheDir"
        android:text="@string/btn_save_with_file_inner_cache" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startSaveWithFileExternalFile"
        android:text="@string/btn_save_with_file_external_file" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startSaveWithFileExternalCache"
        android:text="@string/btn_save_with_file_external_cache" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startSaveWithSql"
        android:text="@string/btn_save_with_sql" />
</LinearLayout>
